# osm-history-splitter

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac  cut.hpp  example.config  geometryreader.hpp  growing_bitset.hpp  hardcut.hpp  osm_history_splitter.lsm.in  osm_history_splitter.spec.in  softcut.hpp  split-all-clipbounds.py  splitter.cpp
clipbounds/: africa.poly  antarctica.poly  asia.poly  australia-oceania.poly  central-america.poly  europe.poly  north-america.poly  south-america.poly  us-midwest.poly  us-northeast.poly  us-pacific.poly  us-south.poly  us-west.poly
clipbounds/aaa_test/: go-and-gk-but-no-cemetry.osm  go-and-gk-but-no-cemetry.poly  go-and-gk.osm  go-and-gk.poly  go-no-cemetry.osm  go-no-cemetry.poly  go.osm  go.poly
clipbounds/africa/: canary_islands.poly  ethiopia.poly  guinea.poly  ivory_coast.poly  liberia.poly  libya.poly  madagascar.poly  morocco.poly  south_africa_and_lesotho.poly  tanzania.poly
clipbounds/asia/: azerbaijan.poly  china.poly  gaza-bbox.poly  gaza.poly  gcc_states.poly  india.poly  indonesia.poly  iraq.poly  israel.poly  israel_and_palestine.poly  japan.poly  kazakhstan.poly  kyrgyzstan.poly  mongolia.poly  nepal.poly  pakistan.poly  philippines.poly  taiwan.poly  turkmenistan.poly  uzbekistan.poly
clipbounds/australia-oceania/: new-caledonia.poly  new-zealand.poly
clipbounds/canada/: new-brunswick.poly  newfoundland-and-labrador.poly  ontario.poly  prince-edward-island.poly  quebec.poly
clipbounds/central-america/: haiti-and-domrep.poly
clipbounds/europe/: albania.poly  alps.poly  andorra.poly  austria.poly  azores.poly  belarus.poly  belgium.poly  bosnia-herzegovina.poly  british_isles.poly  bulgaria.poly  croatia.poly  cyprus.poly  czech_republic.poly  denmark.poly  estonia.poly  faroe_islands.poly  finland.poly  france.poly  germany.poly  great_britain.poly  greece.poly  hungary.poly  iceland.poly  ireland.poly  isle_of_man.poly  italy.poly  kosovo.poly  latvia.poly  liechtenstein.poly  lithuania.poly  luxembourg.poly  macedonia.poly  malta.poly  moldova.poly  monaco.poly  montenegro.poly  netherlands.poly  norway.poly  poland.poly  portugal.poly  (+10 more)
clipbounds/europe/france/: alsace.poly  aquitaine.poly  auvergne.poly  basse-normandie.poly  bourgogne.poly  bretagne.poly  centre.poly  champagne-ardenne.poly  corse.poly  franche-comte.poly  haute-normandie.poly  ile-de-france.poly  languedoc-roussillon.poly  limousin.poly  lorraine.poly  midi-pyrenees.poly  nord-pas-de-calais.poly  (+5 more)
clipbounds/north-america/: canada.poly
clipbounds/south-america/: argentina.poly  bolivia.poly  brazil.poly  chile.poly  colombia.poly
clipbounds/us-midwest/: michigan.poly  ohio.poly
clipbounds/us-northeast/: massachusetts.poly  vermont.poly
clipbounds/us-south/: arkansas.poly  district-of-columbia.poly  florida.poly  louisiana.poly  maryland.poly  mississippi.poly  oklahoma.poly  texas.poly  virginia.poly  west-virginia.poly
clipbounds/us-west/: arizona.poly  california.poly  colorado.poly  idaho.poly  montana.poly  new-mexico.poly  oregon.poly  utah.poly  washington.poly
o/: .gitignore
test/: test.config  version-two-node-after.osh
tools/: continents.conf  countries.conf  fetch-and-split.php  misc.conf
(+52 files in other folders)
