bin_PROGRAMS=osm_history_splitter
osm_history_splitter_SOURCES=splitter.cpp hardcut.hpp softcut.hpp

#  uncomment the following if osm_history_splitter requires the math library
#osm_history_splitter_LDADD=-lm

EXTRA_DIST=osm_history_splitter.lsm.in #NAME.texinfo osm_history_splitter.spec.in

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk

#  install the man pages
man_MANS=osm_history_splitter.1
